# ray_tracer

./: .gitignore  Cargo.toml  README.md  cover.yaml  output.ppm  world.yaml
ray_tracer/: Cargo.toml
ray_tracer/src/: camera.rs  canvas.rs  lib.rs  light.rs  main.rs  material.rs  matrix.rs  tuple.rs  world.rs
ray_tracer/src/color/: color.rs  mod.rs  rgb.rs
ray_tracer/src/patterns/: checkers.rs  gradient.rs  mod.rs
ray_tracer/src/shapes/: cone.rs  cube.rs  cylinder.rs  mod.rs  plane.rs  sphere.rs
ray_tracer/src/utils/: fuzzy_equal.rs
ray_tracer_loader/: Cargo.toml
ray_tracer_loader/src/: lib.rs  main.rs  utils.rs
ray_tracer_web/: Cargo.toml  Trunk.toml  index.html
ray_tracer_web/src/: main.rs
src/: camera.rs  canvas.rs  color.rs  intersections.rs  lib.rs  light.rs  main.rs  material.rs  matrix.rs  object.rs  pattern.rs  plane.rs  point.rs  ray.rs  shape.rs  sphere.rs  tuple.rs  types.rs  vector.rs  world.rs
src/color/: color.rs  rgb.rs
src/patterns/: mod.rs  ring.rs  stripe.rs  test_pattern.rs
src/shapes/: cone.rs  cube.rs  cylinder.rs  group.rs  mod.rs  plane.rs  sphere.rs
src/utils/: equal.rs  mod.rs
