[package]
name = "ray_tracer_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ray_tracer = { path = "../ray_tracer" }

serde = "1.0"
serde_yaml = "0.8"
anyhow = "1.0"

image = { version = "0.23.14", features = ["pnm", "png"] }