[package]
name = "ray_tracer_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ray_tracer_loader = { path = "../ray_tracer_loader"  }

yew = "0.19.3"
serde = "1.0"
serde_yaml = "0.8"
image = { version = "0.23.14", features = ["pnm", "png"] }
base64 = "0.13.0"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlTextAreaElement",
]